--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.3.1",
     "react": "^16.13.1",
+    "react-cookie": "^3.1.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.1",
-    "react-cookie": "^3.1.2",
+    "react-widgets": "^5.0.0-beta.16",
     "reactstrap": "^8.0.0"
   },
   "scripts": {
